uiSettings double border fixed

--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,18 @@ header {
           flex-grow: 1;
   text-align: center;
   margin: 0;
+  border: 1px solid lightgray;
+}
+
+#uiSettings fieldset:first-child {
+  border-bottom: none;
+}
+
+@media (min-width: 480px) {
+  #uiSettings fieldset:first-child {
+    border-bottom: 1px solid lightgray;
+    border-right: none;
+  }
 }
 
 #uiSettings input[type="radio"],
