--- a/scss/layout/_uiSettings.scss
+++ b/scss/layout/_uiSettings.scss
@@ -11,6 +11,14 @@
 		flex-grow: 1;
 		text-align: center;
 		margin: 0;
+		border: 1px solid lightgray;
+		&:first-child {
+			border-bottom: none;
+			@media (min-width: 480px) {
+				border-bottom: 1px solid lightgray;
+				border-right: none;
+			}
+		}
 	}
 	input[type="radio"],
 	input[type="checkbox"] {
